// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot with address order prop 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
}

<address
  className="c0"
>
  Salvos Seafood
   
  <br />
  (504) 393-7303
   
  <br />
</address>
`;

exports[`basic snapshot with invalid address properties prop 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  background-color: #ffeeef;
  border-color: #bc1d2b;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  color: #bc1d2b;
  padding-bottom: 0;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 0;
}

<address
  className="c0"
>
  Salvos Seafood
   
  <br />
  <span
    className="c1"
  >
    7742 Hwy 23
  </span>
   
  <br />
  Belle Chasse
  , 
  LA
   
  <br />
  70037
   
  <br />
  <span
    className="c1"
  >
    US
  </span>
</address>
`;

exports[`basic snapshot with is flat prop 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
}

<address
  className="c0"
>
  7742 Hwy 23, Belle Chasse, LA 70037 US
</address>
`;

exports[`basic snapshot with required props 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
}

<address
  className="c0"
>
  Salvos Seafood
   
  <br />
  7742 Hwy 23
   
  <br />
  Belle Chasse
  , 
  LA
   
  <br />
  70037
   
  <br />
  US
</address>
`;
